--- a/LectureNotes/03.Fashion_MNIST.ipynb
+++ b/LectureNotes/03.Fashion_MNIST.ipynb
@@ -377,7 +377,12 @@
       "[2] Test Loss: 0.6818, Accuracy: 74.56%\n",
       "[3] Test Loss: 0.5896, Accuracy: 79.17%\n",
       "[4] Test Loss: 0.5444, Accuracy: 80.86%\n",
-      "[5] Test Loss: 0.5376, Accuracy: 80.99%\n"
+      "[5] Test Loss: 0.5376, Accuracy: 80.99%\n",
+      "[6] Test Loss: 0.6585, Accuracy: 73.98%\n",
+      "[7] Test Loss: 0.4859, Accuracy: 82.59%\n",
+      "[8] Test Loss: 0.4797, Accuracy: 82.64%\n",
+      "[9] Test Loss: 0.4634, Accuracy: 83.41%\n",
+      "[10] Test Loss: 0.4709, Accuracy: 83.31%\n"
      ]
     }
    ],
